--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,30 +17,86 @@
         <img src="pic/image3.jpg">
     </section>
 
-    <div class="container">
-        <section class="section2">
+    <section class="container">
+        <div class="section2">
             <h2>My Name</h2>
             <br>
             <hr style="width: 200px;" style="margin: 20px;">
             <br>
             <p class="s2p">Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-        </section>
-        <section class="section3">
+        </div>
+        <div class="section3">
             <h3>My Skills</h3>
-
 
             <p>Photography</p>
             <div class="progress">
-                <div class="progress__fill"></div>
+                <div class="bar1"></div>
             </div>
-            <p >Web Design</p>
+            <p>Web Design</p>
             <div class="progress">
-                <div class="progress__fill"></div>
+                <div class="bar2"></div>
+            </div>
+             <p >Photoshop</p>
+            <div class="progress">
+                <div class="bar3"></div>
+            </div>
+        </div>
+
+        
+        <div class="con1">
+            <div class="bx">
+                <span>11+</span> 
+                
+                Partners
+            </div>
+            <div class="bx">
+                <span>55+</span> 
+                Project Done
+            </div>
+            <div class="bx">
+                <span>99+</span> 
+                Happy Clients
             </div>
 
-
-        </section>
-    </div>
+            <div class="bx">
+            <span>150+</span> 
+                Meetings
+            </div>
+        </div>
+        <!-- <button class="btn">
+            <a href="#" > 
+                <i class="fa fa-download"></i>
+                Download Resume
+            </a>
+           </button>
+         -->
+        <button class="button1">
+             <a href="#" > 
+             <i class="fa fa-download"> Download Resume</i>
+             </a>
+        </button>
+        <h3>My Price</h3>
+        <div class="payment">
+         <ul>
+            <li class="headerList">Basic</li>
+            <li >Webdesign</li>
+            <li >Photography</li>
+            <li >5GB Storage</li>
+            <li >Mail support</li>
+            <li class="totalList">$10<span>per month</span></li>
+            <button>Sign Up</button>
+        </ul>
+         <ul>
+            <li class="headerList">Pro</li>
+            <li >Webdesign</li>
+            <li >Photography</li>
+            <li >50GB Storage</li>
+            <li >Endless Support</li>
+            <li class="totalList">25$<span>per month</span></li>
+            <button>Sign Up</button>
+        </ul>
+        </div>
+    </section>
 </body>
-</html>
+</html> 
