updated na source code

--- a/index.html
+++ b/index.html
@@ -71,31 +71,33 @@
             </a>
            </button>
          -->
-        <button class="button1">
-             <a href="#" > 
-             <i class="fa fa-download"> Download Resume</i>
-             </a>
-        </button>
+
+        <a href="#">
+            <button class="button1">
+                <i class="fa fa-download"></i> Download Resume
+            </button>
+        </a>
+
         <h3>My Price</h3>
         <div class="payment">
-         <ul>
-            <li class="headerList">Basic</li>
-            <li >Webdesign</li>
-            <li >Photography</li>
-            <li >5GB Storage</li>
-            <li >Mail support</li>
-            <li class="totalList">$10<span>per month</span></li>
-            <button>Sign Up</button>
-        </ul>
-         <ul>
-            <li class="headerList">Pro</li>
-            <li >Webdesign</li>
-            <li >Photography</li>
-            <li >50GB Storage</li>
-            <li >Endless Support</li>
-            <li class="totalList">25$<span>per month</span></li>
-            <button>Sign Up</button>
-        </ul>
+            <ul class="payment1" style="margin-right: 10px;">
+                <li class="headerList">Basic</li>
+                <li >Webdesign</li>
+                <li >Photography</li>
+                <li >5GB Storage</li>
+                <li >Mail support</li>
+                <li class="totalList">$10<span>per month</span></li>
+                <button class="paymentBtn1">Sign Up</button>
+            </ul>
+            <ul class="payment2" style="margin-left: 10px;">
+                <li class="headerList">Pro</li>
+                <li >Webdesign</li>
+                <li >Photography</li>
+                <li >50GB Storage</li>
+                <li >Endless Support</li>
+                <li class="totalList">25$<span>per month</span></li>
+                <button class="paymentBtn2" >Sign Up</button>
+            </ul>
         </div>
     </section>
 </body>
